--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <a href="https://www.facebook.com/photo.php?fbid=977648317111410&" class="a" title="Ds By D" target="_blank" color="#6699FF">
                         <font style="font-family:宋体; font-size:30px" ; color="#6699FF" ;></font>
                     </a></span><br>
-                    <span class="say"><span class="space"></span> <img src="/image/anh.jpg" align="center" width="160"
+                    <span class="say"><span class="space"></span> <img src="./image/anh.jpg" align="center" width="160"
                             height="110" /> </span><br>
       </div>
                 </div>
