--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <a href="https://www.facebook.com/photo.php?fbid=977648317111410&" class="a" title="Ds By D" target="_blank" color="#6699FF">
                         <font style="font-family:宋体; font-size:30px" ; color="#6699FF" ;></font>
                     </a></span><br>
-                    <span class="say"><span class="space"></span> <img src="https://github.com/hanaquynh123/ikv/blob/master/image/anh.jpg" align="center" width="160"
+                    <span class="say"><span class="space"></span> <img src="https://scontent-hkg1-2.xx.fbcdn.net/v/t39.30808-6/433468477_977649523777956_301565666266644463_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeG4hblrtpOPY_QmdOAFik42kOZkPFPVc1SQ5mQ8U9VzVLHPcZTKBbp0Zdh35yPe4JDwOPzRdvZTE0yXOnFSghAo&_nc_ohc=GLCsVXVeY_8Q7kNvgEewhge&_nc_ht=scontent-hkg1-2.xx&oh=00_AYBr4Vs1xF99YnIP2mYH4Fuw1DoH5cXKUK95IYSdQUj2jQ&oe=664BEDA9" align="center" width="160"
                             height="110" /> </span><br>
       </div>
                 </div>
