--- a/index.html
+++ b/index.html
@@ -27,13 +27,8 @@
              <div id="wrap">
                 <div id="text">
 			        <div id="code">
-			      <font color="#0000FF"><span class="say">Hi ...</span><br>
-						<span class="say"> </span><br>
-						<span class="say">Gió đưa cành trúc la đà</span><br>
-						<span class="say">Em xin giới thiệu tên là Hana</span><br>
-						<span class="say">Người xinh duyên dáng nết na</span><br>
-						<span class="say">Chồng con chưa có vẫn là độc thân :)))</span><br>
-						<br>
+			      <font color="#0000FF"><span class="say">Hi, I'm Quỳnh Hana</span>
+						
 			  </font></p>
 
               <span class="say"><span class="space"></span></span>
