--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
                 <div id="text">
 			        <div id="code">
 			      <font color="#0000FF"><span class="say">Hi, I'm Quỳnh Hana</span>
-						
+					<font color="#0000FF"><span class="say"></span>
+					<font color="#0000FF"><span class="say"></span>
+					<font color="#0000FF"><span class="say"></span>
+					<font color="#0000FF"><span class="say">Chờ cho phượng hết mùa hoa</span>
+					<font color="#0000FF"><span class="say">Chờ cho đôi má ngả hồng sang xanh</span>
+					<font color="#0000FF"><span class="say">Thì tui vẫn chờ :)))</span>
 			  </font></p>
 
               <span class="say"><span class="space"></span></span>
